full screen support for slide title wrap fix

--- a/src/css/components/_slide.css
+++ b/src/css/components/_slide.css
@@ -70,4 +70,7 @@
   .slide-model {
     max-width: 650px;
   }
+  .slide-model.full-screen {
+    max-width: none;
+  }
 }
